# croaring_cmake_demo_single_file

./: CMakeLists.txt  README.md
